--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,11 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Business.EditUserActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Business.MainActivity" />
+        </activity>
         <activity
             android:name=".Business.CommunityActivity"
             android:screenOrientation="portrait">
