--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,8 +60,8 @@
         </activity>
         <activity
             android:name=".Business.RequestsActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".Business.NewsMoreActivity"></activity>
     </application>
 
 </manifest>
