favorites activity created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Business.MainActivity" />
         </activity>
+
+        <activity
+            android:name=".Business.FavoritesActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Business.MainActivity" />
+        </activity>
+
+
         <activity
             android:name=".Business.CommunityActivity"
             android:screenOrientation="portrait">
@@ -62,6 +72,8 @@
             android:name=".Business.RequestsActivity"
             android:screenOrientation="portrait"></activity>
         <activity android:name=".Business.NewsMoreActivity"></activity>
+
+
     </application>
 
 </manifest>
