--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,8 +60,9 @@
         </activity>
         <activity
             android:name=".Business.RequestsActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".Business.NewsMoreActivity"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".Business.NewsMoreActivity" />
+        <activity android:name=".Business.EventsActivity"></activity>
     </application>
 
 </manifest>
