--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Business.MainActivity" />
         </activity>
-
         <activity
             android:name=".Business.FavoritesActivity"
             android:screenOrientation="portrait">
@@ -45,8 +44,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Business.MainActivity" />
         </activity>
-
-
         <activity
             android:name=".Business.CommunityActivity"
             android:screenOrientation="portrait">
@@ -70,15 +67,14 @@
         </activity>
         <activity
             android:name=".Business.RequestsActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".Business.NewsMoreActivity">
-        </activity>
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".Business.NewsMoreActivity"></activity>
         <activity android:name=".Business.EventsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Business.MainActivity" />
         </activity>
-      
+        <activity android:name=".Business.CreateEventActivity"></activity>
     </application>
+
 </manifest>
