--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,27 +60,28 @@
         </activity>
         <activity
             android:name=".Business.NewsActivity"
-            android:screenOrientation="portrait">
-            </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".Business.RequestsActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".Business.NewsMoreActivity" />
-        <activity android:name=".Business.EventsActivity"
+        <activity
+            android:name=".Business.EventsActivity"
             android:screenOrientation="portrait">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Business.MainActivity" />
         </activity>
-
+        <activity
+            android:name=".Business.ReportsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Business.CreateEventActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Business.EventInfoActivity"
             android:screenOrientation="portrait" />
-
+        <activity android:name=".Business.ProfileUserActivity"></activity>
     </application>
 
 </manifest>
