--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,7 +91,9 @@
         <service
             android:name=".Business.ReminderCreator"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".Business.ChatActivity"></activity>
     </application>
 
 </manifest>
