Messages list loaded

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,12 +88,16 @@
             android:screenOrientation="portrait" />
         <activity android:name=".Business.ProfileUserActivity" />
 
+        <activity
+            android:name=".Business.ChatActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
         <service
             android:name=".Business.ReminderCreator"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".Business.ChatActivity"></activity>
     </application>
 
 </manifest>
