--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,9 +40,14 @@
         <activity
             android:name=".Business.FavoritesActivity"
             android:screenOrientation="portrait">
+
+            <!--
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Business.MainActivity" />
+            </
+            -->
         </activity>
         <activity
             android:name=".Business.CommunityActivity"
@@ -60,7 +65,7 @@
         </activity>
         <activity
             android:name=".Business.NewsActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Business.RequestsActivity"
             android:screenOrientation="portrait" />
@@ -81,7 +86,14 @@
         <activity
             android:name=".Business.EventInfoActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".Business.ProfileUserActivity"></activity>
+        <activity android:name=".Business.ProfileUserActivity" />
+
+        <service
+            android:name=".Business.ReminderCreator"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".Business.ChatActivity"></activity>
     </application>
 
 </manifest>
