Notificaciones push de eventos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.cloudinary:cloudinary-android:1.13.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
